добавил страницу каталога

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">приглашаем<br>к сотрудничеству<br>дилеров!</h2>
-        <span class="contacts_description">ул. Большая Конюшенная, д. 19/8<br><br class="tablet-version-transfer">Санкт-Петербург</span>
+        <span class="contacts__description">ул. Большая Конюшенная, д. 19/8<br><br class="tablet-version-transfer">Санкт-Петербург</span>
         <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
         <div class="map">
           <span class="visually-hidden">наше расположение на карте</span>
