--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
   <!--main-->
   <main class="main-container">
     <h1 class="form-title">Подбор программы</h1>
-    <h2 class="form-title__description">Заполните анкету, и мы подберем<br>программу питания для вашего кота</h2>
+    <h2 class="form-title-description">Заполните анкету, и мы подберем<br>программу питания для вашего кота</h2>
     <form class="program-selection" action="#" method="get">
       <fieldset class="program-selection__item cat-profile">
         <legend class="visually-hidden">Данные вашего кота</legend>
@@ -64,27 +64,27 @@
         <legend class="visually-hidden">Что нужно вашему питомцу ?</legend>
         <ul class="purpose__list">
           <li class="purpose__list-item">
-              <input class="control__input" type="radio" name="program-selection" value="похудение" id="slim" checked>
-              <label class="control__input-label" for="slim">похудение</label>
+              <input class="purpose__list-input" type="radio" name="program-selection" value="похудение" id="slim" checked>
+              <label class="purpose__list-input-label" for="slim">похудение</label>
           </li>
           <li class="purpose__list-item">
-              <input class="control__input" type="radio" name="program-selection" value="набор" id="fat">
-              <label class="control__input-label" for="fat">Набор массы</label>
+              <input class="purpose__list-input" type="radio" name="program-selection" value="набор" id="fat">
+              <label class="purpose__list-input-label" for="fat">Набор массы</label>
           </li>
           <li class="purpose__list-item">
-              <input class="control__input" type="radio" name="program-selection" value="совет" id="advice">
-              <label class="control__input-label" for="advice">Не знаю (Нужен ваш совет)</label>
+              <input class="purpose__list-input" type="radio" name="program-selection" value="совет" id="advice">
+              <label class="purpose__list-input-label" for="advice">Не знаю (Нужен ваш совет)</label>
           </li>
         </ul>
       </fieldset>
       <fieldset class="owner-contacts">
         <legend class="owner-contacts__title">Контактные данные (владельца кота)</legend>
-        <ul class="cat-owner__list">
-          <li class="cat-owner__list-item">
+        <ul class="cat-owner-list">
+          <li class="cat-owner-list__item">
             <label class="owner-label" for="owner-email">E-mail:*</label>
             <input class="owner-input" type="email" id="owner-email" placeholder="kuklachev@gmail.com">
           </li>
-          <li class="cat-owner__list-item">
+          <li class="cat-owner-list__item">
             <label class="owner-label" for="owner-phone">Телефон:*</label>
             <input class="owner-input" type="tel" id="owner-phone" placeholder="8 (960) 900-60-90">
           </li>
