внес правки по код ревью

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -339,7 +339,7 @@
       </ul>
       <div class="footer__html-academy-logo html-academy-logo">
         <a class="html-academy-logo__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="html-academy-logo__text"></span>
+          <span class="html-academy-logo__text">HTML Academy</span>
         </a>
         <a class="html-academy-logo__link" href="https://htmlacademy.ru/intensive/adaptive">
           <svg class="html-academy-logo__icon" aria-hidden="true" focusable="false" width="27" height="34"
@@ -350,7 +350,7 @@
                 fill="#666" />
             </g>
             <defs>
-              <clipPath id="a">
+              <clipPath id="a1">
                 <path d="M0 0h27v34H0z" />
               </clipPath>
             </defs>
