--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Кэт энерджи</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -263,7 +264,7 @@
       </div>
     </section>
     <!--contacts-->
-    <section class="contacts">
+    <section class="contacts contacts--grey">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">приглашаем<br>к сотрудничеству<br>дилеров!</h2>
         <span class="contacts__description">ул. Большая Конюшенная, д. 19/8</span>
