--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,24 +11,28 @@
 <body class="page__body">
   <!--header-->
   <header class="main-header">
-    <a href="./index.html" class="main-header__logo">
-      <img class="main-header__logo-image" src="./img/logo-mobile.svg" width="33" height="38"
-        alt="Логотип сайта Кэт энерджи">
-    </a>
-    <!--navigation-->
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+    <div class="main-header__logo">
+      <a href="./index.html" class="main-header__logo-link">
+        <img class="main-header__logo-image" src="./img/logo-mobile.svg" width="33" height="38"
+          alt="Логотип сайта Кэт энерджи">
+        <img class="main-header__logo-image" src="./img/logo-mobile-title.svg" width="101" height="18"
+          alt="Логотип сайта Кэт энерджи">
+      </a>
+      <button class="main-header__logo-button" type="button">
         <span class="visually-hidden">Открыть меню</span>
-        <svg class="main-nav__toggle-icon" aria-hidden="true" focusable="false" width="24" height="18"
+        <svg class="main-header__logo-icon" aria-hidden="true" focusable="false" width="24" height="18"
           fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path stroke="#000" stroke-width="1.5" d="M0 1.25h24M0 9.25h24M0 17.25h24" />
         </svg>
       </button>
+    </div>
+    <!--navigation-->
+    <nav class="main-nav">
       <ul class="main-nav__list">
-        <li class="main-nav__item">
+        <li class="main-nav__item main-nav__item--current">
           <a class="main-nav__link" href="./index.html">Главная</a>
         </li>
-        <li class="main-nav__item main-nav__item--current">
+        <li class="main-nav__item">
           <a class="main-nav__link" href="#">Каталог продукции</a>
         </li>
         <li class="main-nav__item">
@@ -267,10 +271,11 @@
     <section class="contacts contacts--grey">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">приглашаем<br>к сотрудничеству<br>дилеров!</h2>
-        <span class="contacts__description">ул. Большая Конюшенная, д. 19/8</span>
-        <br class="tablet-version-transfer">
-        <span class="contacts__description">Санкт-Петербург</span>
-        <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
+        <div class="contacts__description">
+          <span class="contacts__description-text">ул. Большая Конюшенная, д. 19/8</span>
+          <br class="tablet-version-transfer">
+          <span class="contacts__description-text">Санкт-Петербург</span>
+        </div>        <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
         <div class="map">
           <span class="visually-hidden">наше расположение на карте</span>
         </div>
