--- a/source/index.html
+++ b/source/index.html
@@ -11,21 +11,23 @@
 <body class="page__body">
   <!--header-->
   <header class="main-header">
-    <a href="./index.html" class="main-header__logo">
-      <img class="main-header__logo-image" src="./img/logo-mobile.svg" width="33" height="38"
-        alt="Логотип сайта Кэт энерджи">
-      <img class="main-header__logo-image" src="./img/logo-mobile-title.svg" width="101" height="18"
-        alt="Логотип сайта Кэт энерджи">
-    </a>
-    <!--navigation-->
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+    <div class="main-header__logo">
+      <a href="./index.html" class="main-header__logo-link">
+        <img class="main-header__logo-image" src="./img/logo-mobile.svg" width="33" height="38"
+          alt="Логотип сайта Кэт энерджи">
+        <img class="main-header__logo-image" src="./img/logo-mobile-title.svg" width="101" height="18"
+          alt="Логотип сайта Кэт энерджи">
+      </a>
+      <button class="main-header__logo-button" type="button">
         <span class="visually-hidden">Открыть меню</span>
-        <svg class="main-nav__toggle-icon" aria-hidden="true" focusable="false" width="24" height="18"
+        <svg class="main-header__logo-icon" aria-hidden="true" focusable="false" width="24" height="18"
           fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path stroke="#000" stroke-width="1.5" d="M0 1.25h24M0 9.25h24M0 17.25h24" />
         </svg>
       </button>
+    </div>
+    <!--navigation-->
+    <nav class="main-nav main-nav-closed">
       <ul class="main-nav__list">
         <li class="main-nav__item main-nav__item--current">
           <a class="main-nav__link" href="#">Главная</a>
@@ -55,13 +57,13 @@
       </div>
       <div class="programs">
         <div class="programs__card">
-          <h2 class="programs__card-title">похудение</h2>
+          <h2 class="programs__card-title programs__card-title--slim">похудение</h2>
           <span class="programs__card-description">Ваш кот весит больше собаки и почти утратил способность лазить по
             деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</span>
           <a class="programs__card-link" href="./catalog.html">каталог slim</a>
         </div>
         <div class="programs__card">
-          <h2 class="programs__card-title">набор массы</h2>
+          <h2 class="programs__card-title programs__card-title--mass">набор массы</h2>
           <span class="programs__card-description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat
             Energy
             Pro поможет вашему коту нарастить необходимые мышцы!</span>
@@ -131,9 +133,11 @@
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">приглашаем<br>к сотрудничеству<br>дилеров!</h2>
-        <span class="contacts__description">ул. Большая Конюшенная, д. 19/8</span>
-        <br class="tablet-version-transfer">
-        <span class="contacts__description">Санкт-Петербург</span>
+        <div class="contacts__description">
+          <span class="contacts__description-text">ул. Большая Конюшенная, д. 19/8</span>
+          <br class="tablet-version-transfer">
+          <span class="contacts__description-text">Санкт-Петербург</span>
+        </div>
         <!--вот тут пока что не понятно как сделать дополнительный перенос строки только для планшетной версии-->
         <div class="map">
           <span class="visually-hidden">наше расположение на карте</span>
